2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.bat: removed citation marks
	* src/components/ogre/widgets/EntityPickerWidget.*: fixed the signature for the event, something which strangely enough compiles and runs without problem (not even a warning) on gcc, but with MSVC compiles without warning but crashes at runtime, with a useless stack trace. Oh well.

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/envronment/FoliageArea.*, src/components/ogre/envronment/Foliage.cpp: 
		* added the Ogre::Framelistener to the Foliage class, since you basically can't detach a frame listerner while inside a frameStarted event
		* added methods for destroying FoliageAreas to the Foliage class
		* cleaned up the creation and handling of FoliageAreas a bit
	* src/components/ogre/TerrainGenerator.*:  watch for changes to the config file, more specifically graphics:foliage, and create or remove foliage from the TerrainPages accordingly
	* src/components/ogre/TerrainPage.*: added methods for preparing, showing, hiding and destroying foliage areas
	* src/components/ogre/Avatar.h: remove the class name in the specification

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* autopackage/default.apspec.in: the require keyword requires an interface version, even if it's ignored

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf, src/components/ogre/Avatar.*: added config option for setting the interval between updates to the server. Need to do some tweaking to make sure the player movement is smooth enough while not swamping the server with update commands.
	* src/services/config/ConfigService.cpp: write info to the console when changing config values

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widget/EntityPickerWidget.*: changed the behaviour of the menu after a suggestion from lakin. It now is only shown while the left mouse button is pressed. Much nicer!

2005-09-25  Erik Hjortsberg  <erik@katastrof.nu>
